# jinni

./: .clinerules-architect  .clinerules-ask  .clinerules-code  .clinerules-debug  .clinerules-test  .contextfiles  .gitignore  .roomodes  CHANGELOG.md  DESIGN.md  PLAN.md  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: automerge.yml
.github/scripts/: wsl_smoke.py
.github/workflows/: test.yml  windows.yml
jinni/: __init__.py  cli.py  config_system.py  context_walker.py  core_logic.py  exceptions.py  exclusion_parser.py  file_processor.py  server.py  utils.py
jinni-server-pkg/: README.md  pyproject.toml
jinni-server-pkg/jinni_server_pkg/: __init__.py
memory-bank/: PLAN_github_actions.md  activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
tests/: conftest.py  test_cli_exclusions.py  test_config_system.py  test_core_logic.py  test_exclusion_parser.py  test_file_processor_summarization.py  test_integration.py  test_integration_cli.py  test_integration_mcp.py  test_integration_summarization.py  test_mcp_exclusions.py  test_schema_safety.py  test_translate_wsl_path.py  test_utils.py  test_utils_summarization.py  test_utils_wsl.py
