[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jinni"
version = "0.1.1" # Initial version, can be updated
description = "A tool to help LLMs efficiently read and understand project context."
readme = "README.md"
requires-python = ">=3.10" # Minimum Python version required by dependencies (e.g., mcp)
license = { text = "Apache-2.0" }
authors = [
  { name = "Solomon Matthews", email = "dev@sdmatthews.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pathspec",
    "mcp",
    "pyperclip",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/smat-dev/jinni"
Repository = "https://github.com/smat-dev/jinni"

[project.scripts]
jinni = "jinni.cli:main"
jinni-server = "jinni.server:run_server" # Added script entry point

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]


# Optional: Configure hatchling if needed (e.g., include/exclude files)
# [tool.hatch.build.targets.sdist]
# include = ["/jinni", "/tests"] # Example